{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 4,
  "lineage": "be8e84a3-a8d3-665f-6e4f-a2c0bc93b70d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:241038262697:instance/i-0654415e40348f8db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0654415e40348f8db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0877474a304060c4a",
            "private_dns": "ip-172-31-17-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.10",
            "public_dns": "ec2-54-157-201-245.compute-1.amazonaws.com",
            "public_ip": "54.157.201.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052367babbfea875d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_for_ec2Instance"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05baca8e853d0c1e3",
            "tags": {
              "Name": "lab37-modules+outputs",
              "author": "Ing. Andres Carrillo",
              "studyCase": "Modules+outputs"
            },
            "tags_all": {
              "Name": "lab37-modules+outputs",
              "author": "Ing. Andres Carrillo",
              "studyCase": "Modules+outputs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f465228ef8df129d"
            ]
          },
          "dependencies": [
            "data.aws_ami.dataAmiId",
            "module.sgmodule.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.sgmodule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "module.sgmodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241038262697:security-group/sg-0f465228ef8df129d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f465228ef8df129d",
            "ingress": [
              {
                "cidr_blocks": [
                  "181.237.59.20/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_for_ec2Instance",
            "name_prefix": "",
            "owner_id": "241038262697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab37-Modules+outputs",
              "author": "Ing. Andres Carrillo",
              "studyCase": "Locals+Modules"
            },
            "tags_all": {
              "Name": "lab37-Modules+outputs",
              "author": "Ing. Andres Carrillo",
              "studyCase": "Locals+Modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c43fad09c3703c0e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sgmodule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "module.sgmodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241038262697:security-group/sg-02a224766c82b361c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a224766c82b361c",
            "ingress": [
              {
                "cidr_blocks": [
                  "181.237.59.20/32"
                ],
                "description": "",
                "from_port": 8448,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8448
              }
            ],
            "name": "sg_for_ELB",
            "name_prefix": "",
            "owner_id": "241038262697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab37-Modules+outputs",
              "author": "Ing. Andres Carrillo",
              "studyCase": "Locals+Modules"
            },
            "tags_all": {
              "Name": "lab37-Modules+outputs",
              "author": "Ing. Andres Carrillo",
              "studyCase": "Locals+Modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c43fad09c3703c0e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}